# sshare

./: AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  PRD.md  README.md
.claude/skills/sshare/: SKILL.md
.github/workflows/: ci.yml  release.yml
Formula/: sshare.rb
docs/: ARCHITECTURE.md  CODING_STANDARDS.md  CONTRIBUTING.md  QUALITY_SCORE.md  RELEASING.md  RELIABILITY.md  SECURITY.md  TESTING.md
docs/design-docs/: connected-vaults.md  core-beliefs.md  descriptions.md  git-integration.md  index.md  signed-members-list.md
docs/exec-plans/: tech-debt-tracker.md
docs/exec-plans/active/: README.md
docs/exec-plans/completed/: README.md  connected-vaults.md  descriptions.md  git-integration.md  signed-members.md
docs/product-specs/: index.md
src/: crypto.rs  git.rs  main.rs  registry.rs  sign.rs  test_keys.rs  trust.rs  vault.rs
tests/: cli.rs
